# NixOS

./: .pre-commit-config.yaml  .sops.yaml  Justfile  NOTES.md  README.md  TODO.md  configuration.nix  earthnuker.nix  flake.nix  hardware-configuration.nix  nixpkgs-config.nix  revision.nix  secrets.yml  sys
.github/workflows/: ci.yml
awesomewm/themes/earthnuker/: theme.lua
config/awesomewm/: rc.lua
hosts/godwaker/: boot.nix  environment.nix  hardware.nix  services.nix
hosts/godwaker/disk-config/: default.nix  system.nix
hosts/talos/: caddy.nix  default.nix  facter.json  hardware-configuration.nix  networking.nix  services.nix
hosts/talos/containers/: default.nix  ghidra.nix  linkding.nix  test.nix
hosts/talos/disk-config/: default.nix  zpool.nix
modules/common/: default.nix
npins/: default.nix  sources.json
outputs/: default.nix
outputs/hosts/daedalus/: default.nix
outputs/hosts/godwaker/: backup.nix  boot.nix  default.nix  environment.nix  facter.json  hardware-configuration.nix  hardware.nix  networking.nix  power.nix  services.nix  topology.nix
outputs/hosts/helios/: default.nix
outputs/hosts/talos/: default.nix  (+8 more)
outputs/hosts/talos/services/ffglitch/ffglitch/: Cargo.toml  rustfmt.toml
outputs/hosts/talos/services/ffglitch/ffglitch/src/: main.rs  wrapped_cmd.rs
outputs/installer/: default.nix
outputs/secrets/: duckdns.age  qbt.env.age  rflood.env.age  secrets.nix  secrets.yml  tailscale.age
outputs/topology/: default.nix
outputs/util/: revision.nix
secrets/: secrets.nix  tailscale.age
users/earthnuker/: default.nix
vars/: default.nix
(+141 files in other folders)
