[package]
name = "ffglitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
strip = true
opt-level = "z"
lto = true

[dependencies]
avirus = "0.2.5"
byteorder = "1.5.0"
chrono = { version = "0.4.38", default-features = false, features = ["alloc", "std", "clock"] }
color-eyre = "0.6.3"
crossbeam-channel = "0.5.13"
derive_more = {version = "1.0.0", features = ["display"]}
filedescriptor = "0.8.2"
fs-err = "2.11.0"
futures = "0.3.30"
globwalk = "0.9.1"
human-repr = { version = "1.1.0", features = ["iec", "space"] }
humantime-serde = "1.1.1"
itertools = "0.13.0"
libc = "0.2.158"
mastodon-async = { version = "1.3.2", default-features=false, features = ["rustls-tls", "toml"] }
megalodon = {version = "0.13.8", default-features=false, features = ["rustls-tls"]}
memmap2 = "0.9"
path-slash = "0.2.1"
quick-xml = { version = "0.36.2", features = ["serialize"] }
rand = "0.8.5"
rand_distr = "0.4.3"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["local-time", "chrono", "env-filter"] }
ureq = { version = "2.10.1", features = ["json"] }
wait-timeout = "0.2.0"
